--- a/src/btl/meson.build
+++ b/src/btl/meson.build
@@ -14,12 +14,13 @@ btltest = executable('btltest',
   'test/btlcollectiontest.cpp',
   'test/btlreducetest.cpp',
   'test/clonetest.cpp',
-  'test/pmrtest.cpp',
-  'test/tupletest.cpp',
-  'test/uniquetest.cpp',
-  'test/sharedtest.cpp',
-  'test/typelisttest.cpp',
   'test/invoketest.cpp',
+  'test/lrucachetest.cpp',
+  'test/pmrtest.cpp',
+  'test/sharedtest.cpp',
+  'test/tupletest.cpp',
+  'test/typelisttest.cpp',
+  'test/uniquetest.cpp',
   'test/utf8test.cpp',
   dependencies: [libbtldep, gtestdep],
   )
