Move result test from bqui to btl

--- a/src/btl/meson.build
+++ b/src/btl/meson.build
@@ -17,6 +17,7 @@ btltest = executable('btltest',
   'test/invoketest.cpp',
   'test/lrucachetest.cpp',
   'test/pmrtest.cpp',
+  'test/resulttest.cpp',
   'test/sharedtest.cpp',
   'test/tupletest.cpp',
   'test/typelisttest.cpp',
