Add initial gravity handling

--- a/src/bqui/meson.build
+++ b/src/bqui/meson.build
@@ -15,7 +15,9 @@ libbquisrc = [
   'src/modifier/onhover.cpp',
   'src/modifier/onkeyevent.cpp',
   'src/modifier/ontextevent.cpp',
+  'src/modifier/setgravity.cpp',
   'src/modifier/setid.cpp',
+  'src/modifier/setsize.cpp',
   'src/modifier/setsizehint.cpp',
   'src/modifier/trackfocus.cpp',
   'src/modifier/transform.cpp',
